Revert "Remove bookings section"
This reverts commit d6fc0f42a3d5e88aa5bb282bfd33f19ef15c234e.

--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -9,6 +9,11 @@ URL = "team"
 weight = 2
 
 [[main]]
+name = "Bookings"
+URL = "pricing"
+weight = 3
+
+[[main]]
 name = "Contact"
 URL = "contact"
-weight = 3
+weight = 4
