--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -6,26 +6,24 @@ about:
     - icon: ti-link
       title: We're Family
       content: >
-        SOMMOS is a big family of fighter freelancers gathering and offering the
-        most powerful profiles in the market known for their good vibes and
-        positive energy. Old school events are water under the bridge, we are a
-        new wave of well-travelled freelancers with cutting edge concepts making
-        the best of ourselves.
+        At SOMMOS we are a big family of bold and daring freelancers gathering together to offer the most powerful professionals in the market.
+        We are known for our good vibes and positive energy.
+        Classic events are a thing of the past.
+        We are the new wave of well-travelled freelancers with cutting edge concepts offering the best of ourselves.
 
     - icon: ti-medall-alt
       title: We're Professional
       content: >
-        SOMMOS provides you with hard workers profiles, committed team,
-        creative, passionate, decisive, funny, expert, widely experienced,
-        diversity lovers on a mission to trigger change in the events industry.
-        We love what we do and we make our job our lifestyle, the most important
-        is not what we do but how we do it.
+        At SOMMOS we are hard workers and a committed team.
+        We’re creative, passionate, decisive and fun.
+        We have extensive experience and are lovers of diversity on a mission to trigger change in the events industry.
+        We love what we do and we make our job our lifestyle.
+        The most important thing is not what we do but how we do it.
 
     - icon: ti-rocket
       title: We're Future
       content: >
-        SOMMOS is a digital networking community within the event industry,
-        bringing professional freelancers and businesses together. It is time
-        to put the brakes on endless freelance research with no guarantees and
-        say hello to successful synergies in the marketplace to ease your
-        precious time.
+        At SOMMOS we are a community of digital networkers within the event industry.
+        We bring together businesses with professional freelancers.
+        Say goodbye to wasting your precious time finding the right people for the job.
+        We are your one stop shop for organizing the right team of profesional for you’re needs, with guarantees of quality work and successful synergies.
