Update We're Professional section

--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -15,7 +15,7 @@ about:
       title: We're Professional
       content: >
         At SOMMOS we are hard workers and a committed team.
-        We’re creative, passionate, decisive and fun.
+        We’re creative, passionate, decisive, trustworthy and fun.
         We have extensive experience and are lovers of diversity on a mission to trigger change in the events industry.
         We love what we do and we make our job our lifestyle.
         The most important thing is not what we do but how we do it.
@@ -26,4 +26,4 @@ about:
         At SOMMOS we are a community of digital networkers within the event industry.
         We bring together businesses with professional freelancers.
         Say goodbye to wasting your precious time finding the right people for the job.
-        We are your one stop shop for organizing the right team of profesional for you’re needs, with guarantees of quality work and successful synergies.
+        We are your one stop shop for organizing the right team of professional for your needs, with guarantees of quality work and successful synergies.
