--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -14,11 +14,11 @@ about:
     - icon: ti-medall-alt
       title: We're Professional
       content: >
-        At SOMMOS we are hard workers and a committed team.
-        We’re creative, passionate, decisive, trustworthy and fun.
+        At SOMMOS we are hard workers and a committed happy team.
+        We’re creative, passionate, decisive, reliable, trustworthy and fun.
         We have extensive experience and are lovers of diversity on a mission to trigger change in the events industry.
         We love what we do and we make our job our lifestyle.
-        The most important thing is not what we do but how we do it.
+        The most important thing for us is not what we do but how we do it.
 
     - icon: ti-rocket
       title: We're Future
