Update Alberto description

--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -33,9 +33,9 @@ team:
       image : profiles/alberto/image.png
       designation : Freelance Event Manager
       description : |
-        I was responsible for production in a big event commemorating the Day of the Dead in Mexico.
-        In a 2,400m2 space, we achieved a spectacular decoration with typical objects brought from the country,
-        more than 7,000 flowers, a ceiling covered with guitars and different thematic areas.
+        Alberto enjoys taking care of every aspect of technical production, from
+        pre-event planning to onsite coordination. He is a detail-oriented PM and
+        the best partner to think ahead and prepare plan A-B-C for extra safety and comfort.
       quiz:
         - Laptop
         - Excel
