Fix patricia quiz

--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -353,7 +353,7 @@ team:
         - Brainstorming
         - Backstage
         - Speaker
-        - Early Mornings
+        - Early morning
       languages:
         - name: Spanish
           percent: 100%
